external-crates/move/crates/move-compiler/tests/move_2024/matching/bool_counterexample_25452.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/matching/bool_counterexample_25452.move:5:25
  │
5 │             false       0 => abort 0,
  │                         ^
  │                         │
  │                         Unexpected '0'
  │                         Expected '=>'

warning[W04039]: unable to determine principal type for literal
  ┌─ tests/move_2024/matching/bool_counterexample_25452.move:6:13
  │
6 │             1 => abort 1,
  │             ^ Could not determine a concrete type for this numeric literal, so defaulting to 'u64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>u64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04007]: incompatible types
  ┌─ tests/move_2024/matching/bool_counterexample_25452.move:6:13
  │
2 │     fun f(b: bool): u64 {
  │              ---- Expected: 'bool'
  ·
6 │             1 => abort 1,
  │             ^
  │             │
  │             Invalid pattern
  │             Given: integer
